--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,11 @@ UPLOAD_MAX_SIZE=10485760 # 10MB
 UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/gif,image/webp
 UPLOAD_PATH=./uploads
 
+# UploadThing Configuration
+UPLOADTHING_SECRET=your_uploadthing_secret_key
+UPLOADTHING_APP_ID=your_uploadthing_app_id
+UPLOADTHING_MAX_SIZE=512000 # 500KB
+
 # API Configuration
 API_PREFIX=/api/v1
 API_TIMEOUT=30s
