--- a/.env.example
+++ b/.env.example
@@ -27,12 +27,8 @@ CORS_ALLOW_CREDENTIALS=true
 
 # Upload Configuration
 UPLOAD_MAX_SIZE=10485760 # 10MB
-UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/gif,image/webp
+UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/jpg
 UPLOAD_PATH=./uploads
-
-# UploadThing Configuration
-UPLOADTHING_SECRET=your_uploadthing_secret_key
-UPLOADTHING_APP_ID=your_uploadthing_app_id
 
 # API Configuration
 API_PREFIX=/api/v1
