--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,12 @@ UPLOAD_MAX_SIZE=10485760 # 10MB
 UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/jpg
 UPLOAD_PATH=./uploads
 
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+CLOUDINARY_FOLDER=atamlink
+
 # API Configuration
 API_PREFIX=/api/v1
 API_TIMEOUT=30s
